# CellShard

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: CellShardConfig.cmake.in
docs/: FORMAT_ROLES.md  PARKING_LOT.md  SPEC_CSHARD_V1.md  SPEC_CSPACK_V1.md  SPEC_CSPOOL_V1.md
export/: cellshard_h5ad_export.cc  dataset_export.cc  dataset_export.hh  h5ad_writer.cc  h5ad_writer.hh  series_export.cc  series_export.hh
export/internal/: common.hh  snapshot_codec.hh
export/materialize/: csr_export.cc
export/snapshot/: global_metadata_snapshot.cc
export/summary/: load_summary.cc
include/CellShard/: CellShard.hh  core.hh  export.hh  formats.hh  io.hh  runtime.hh
include/CellShard/core/: cuda_compat.cuh  real.cuh  types.cuh
include/CellShard/export/: dataset_export.hh
include/CellShard/formats/: blocked_ell.cuh  compressed.cuh  dense.cuh  diagonal.cuh  quantized_blocked_ell.cuh  sliced_ell.cuh  triplet.cuh
include/CellShard/ingest/: compressed_parts.cuh  dataset_ingest.cuh  mtx_reader.cuh
include/CellShard/ingest/internal/: scan.cuh
include/CellShard/io/: csh5.hh  cshard.hh  multi_assay.hh  pack.hh
include/CellShard/io/common/: codec.hh  fingerprints.hh  generation.hh  layout.hh  layout_policy.hh  matrix_traits.hh  partition.hh  raw_format.hh
include/CellShard/io/csh5/: api.cuh
include/CellShard/io/cshard/: spec.hh
include/CellShard/io/pack/: packfile.cuh  packfile_header.cuh
include/CellShard/quantize/: quantization_format.hh
include/CellShard/runtime/: device.hh  distributed.hh  host.hh  layout.hh  mask_groups.cuh  storage.hh
include/CellShard/runtime/device/: sharded_device.cuh
include/CellShard/runtime/distributed/: distributed.cuh
include/CellShard/runtime/host/: sharded_host.cuh
include/CellShard/runtime/layout/: shard_paths.cuh  sharded.cuh
include/CellShard/runtime/storage/: disk.cuh  shard_storage.cuh
python/: bind_handles.cc  bind_types.cc  module.cc
python/cellshard/: __init__.py
python/internal/: module_support.hh
src/: CellShard.hh  cuda_compat.cuh  dense.cuh  extreme_ptx_primitives.cuh  matrix.cuh  matrix_io.cu  matrix_io.cuh  offset_span.cuh  real.cuh  sharded.cuh  sharded_gpu.cuh  types.cuh
src/_TODO/config/: build_config.cuh
src/_TODO/device/cache/: shard_cache.cuh  upload.cuh
src/apps/: cellshard_main.cc
src/bucket/: blocked_ell_bipartite_optimize_bridge.cu  blocked_ell_bipartite_optimize_host.cuh  major_nnz_raw.cuh
src/bucket/kernels/: csBucket.cuh
src/bucket/kernels/csBucket/: count_major_nnz.cuh  count_shard_major_nnz.cuh  fill_equal_count_bucket_offsets.cuh  gather_major_nnz_by_order.cuh  gather_shifted_major_counts_from_order.cuh  gather_shifted_shard_major_counts_from_order.cuh  init_major_identity.cuh  reorder_compressed_major_segments.cuh  reorder_shard_major_segments.cuh  scatter_inverse_major_order.cuh
src/bucket/operators/: blocked_ell_bipartite_optimize.cuh  blocked_ell_bucket.cuh  major_nnz.cuh  sharded_major_nnz.cuh
src/bucket/routes/: compressed_major_nnz.cuh  sharded_major_nnz.cuh
src/convert/: blocked_ell_from_compressed.cuh  blocked_ell_from_coo_cuda.cuh  compressed_from_coo_raw.cuh  compressed_transpose_raw.cuh  coo_from_compressed_raw.cuh  coo_to_csc.cuh  coo_to_csr.cuh  coo_to_csx.cuh  csc_to_coo.cuh  csc_to_csr.cuh  csr_to_coo.cuh  csr_to_csc.cuh  csx_to_coo.cuh  cusparse_utils.cuh  filtered_blocked_ell_to_compressed.cuh  sliced_ell_from_blocked_ell.cuh  sliced_ell_from_compressed.cuh
src/convert/kernels/: csExpand.cuh  csScatter.cuh  transpose.cuh
src/convert/kernels/csExpand/: csExpandToCoo.cuh  csSearchToCoo.cuh
src/convert/kernels/csScatter/: csScatter.cuh  init_cs_scatter_heads.cuh  (+1 more)
src/convert/routes/: compressed_to_coo.cuh  compressed_transpose.cuh  coo_to_compressed.cuh
src/device/cache/: shard_cache.cuh
src/disk/: csh5.cc  csh5.cuh  matrix.cu  matrix.cuh  packfile.cu  packfile.cuh
src/formats/: blocked_ell.cuh  compressed.cuh  compressed_host.cuh  dense.cuh  dense_host.cuh  diagonal.cuh  diagonal_host.cuh  matrix_base.cuh  quantized_blocked_ell.cuh  sharded.cuh  sliced_ell.cuh  triplet.cuh  triplet_host.cuh
src/formats/sparse/: coo.cuh  csc.cuh  csr.cuh  csx.cuh  dia.cuh
src/ingest/: scan.cuh
src/ingest/common/: barcode_table.cuh  feature_table.cuh  metadata_table.cuh  text_column.cuh
src/ingest/mtx/: compressed_parts.cuh  mtx_reader.cuh  mtx_shard_writer.cuh
src/ingest/series/: series_ingest.cuh  series_manifest.cuh  series_partition.cuh
src/io/binary/: matrix_file.cu  matrix_file.cuh  matrix_io.cu  matrix_io.cuh  shard_storage.cuh
src/io/csh5/: api.cuh  base_internal.hh  create.cc  execution_builders_part.hh  execution_internal.hh  execution_runtime_part.hh  finalize_preprocess.cc  internal_base_part.hh  metadata.cc  preprocess_helpers_part.hh  preprocess_internal.hh  write.cc
src/io/cshard/: cshard.cc
src/io/pack/: packfile.cu  packfile.cuh
src/io/source/: file_reader.cuh
src/repack/: README.md
src/repack/kernels/: sharded_blocked_ell.cuh
src/repack/operators/: sharded_blocked_ell.cuh
src/repack/routes/: sharded_blocked_ell.cuh
src/runtime/: mask_groups.cu
src/runtime/device/: sharded_device.cuh
src/runtime/distributed/: distributed.cuh
src/runtime/host/: sharded_host.cuh
src/runtime/layout/: shard_paths.cu  shard_paths.cuh  sharded.cuh
src/runtime/storage/: disk.cuh  shard_storage.cu  shard_storage.cuh
src/sharded/: disk.cu  disk.cuh  distributed.cuh  series_h5.cc  series_h5.cuh  shard_paths.cu  shard_paths.cuh  sharded.cuh  sharded_device.cuh  sharded_file.cu  sharded_file.cuh  sharded_host.cuh
src/sparse/: coo.cuh  csc.cuh  csr.cuh  csx.cuh  dia.cuh
src/sparse/conversion/: coo_to_csX.cuh  csX_to_coo.cuh
tests/: cellshard_export_runtime_test.cc  cellshard_export_runtime_test.cu  cshard_v1_test.cc  dataset_ingest_compile_test.cu  mask_groups_runtime_test.cu  native_python_api_smoke.py
tests/package_consumer/: CMakeLists.txt  ingest_consumer.cu  inspect_consumer.cc  preprocess_consumer.cu  runtime_consumer.cu
(+21 files in other folders)
